Shrinking entrance transition down so it fits better in mobile Make navbar collapse when you select an option in the hamburger menu Fixing issue with content being under the nav bar on small screens

--- a/src/main/webapp/htl/css/starterkit.css
+++ b/src/main/webapp/htl/css/starterkit.css
@@ -10,7 +10,7 @@
 }
 
 .splash .message {
-    font-size: 5em;
+    font-size: 3em;
     line-height: 1.5em;
     -webkit-text-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;
     text-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;
@@ -20,13 +20,13 @@
 .splash .fa-spinner {
     text-align: center;
     display: inline-block;
-    font-size: 5em;
+    font-size: 3em;
     margin-top: 50px;
 }
 
 .page-host {
     position: relative;
-    top: 40px;
+    top: 40px !important;
 }
 
 .navbar-fixed-top .navbar-inner {
